# AbstractRuntime

./: .gitignore  404.html  ACKNOWLEDGMENTS.md  ACKNOWLEDMENTS.md  CHANGELOD.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  emails.config.example.yaml  index.html  llms-full.txt  llms.txt  mkdocs.yml  pyproject.toml  pytest.ini  sitemap.xml
.github/workflows/: ci.yml  release.yml
adr/: index.html
adr/0001_layered_coupling_with_abstractcore/: index.html
adr/0002_execution_modes_local_remote_hybrid/: index.html
adr/0003_provenance_tamper_evident_hash_chain/: index.html
adr/0004_runtime_owns_run_scoped_media_execution_truth/: index.html
adr/0005_runtime_owns_abstractcore_host_discovery_queries/: index.html
adr/0006_runtime_owns_durable_abstractcore_bloc_prompt_cache/: index.html
adr/0007_runtime_relays_core_owned_model_residency_truth/: index.html
api/: index.html
architecture/: index.html
artifacts/: index.html
backlog/: index.html
backlog/deprecated/: index.html
docs/: README.md  api.md  architecture.md  artifacts.md  evidence.md  faq.md  getting-started.md  limits.md  manual_testing.md  mcp-worker.md  proposal.md  provenance.md  snapshots.md  tools-comms.md  troubleshooting.md  workflow-bundles.md
docs/adr/: 0001_layered_coupling_with_abstractcore.md  0002_execution_modes_local_remote_hybrid.md  0003_provenance_tamper_evident_hash_chain.md  0004_runtime_owns_run_scoped_media_execution_truth.md  0005_runtime_owns_abstractcore_host_discovery_queries.md  0006_runtime_owns_durable_abstractcore_bloc_prompt_cache.md  0007_runtime_relays_core_owned_model_residency_truth.md  README.md
docs/backlog/: README.md
docs/integrations/: abstractcore.md
evidence/: index.html
examples/: 07_react_agent.py  README.md
faq/: index.html
getting-started/: index.html
integrations/abstractcore/: index.html
limits/: index.html
manual_testing/: index.html
mcp-worker/: index.html
proposal/: index.html
provenance/: index.html
search/: search_index.json
snapshots/: index.html
src/abstractruntime/: __init__.py  history_bundle.py
tests/: conftest.py  test_abstractcore_comms_facade.py  test_abstractcore_discovery_facade.py  test_abstractcore_host_facade.py  test_abstractcore_run_facade.py  test_abstractcore_telegram_facade.py  test_active_memory.py  test_active_memory_delta_effect.py  test_answer_user_effect.py  test_artifacts.py  test_command_store.py  test_control_adapter_while.py  test_default_tools_comms_gating.py  test_default_tools_include_skim_files.py  test_default_tools_include_skim_folders.py  test_default_tools_search_files_executor.py  test_e2e_tool_calls_idempotency_lmstudio.py  test_emit_event_without_workflow_registry.py  test_factory_timeouts_default_to_abstractcore_config.py  test_integration_abstractcore.py  test_integrations_abstractcore.py  test_json_file_run_store_children_index.py  test_jsonl_ledger_recovery.py  test_kg_learn_and_recall_contract.py  test_llm_call_media_artifact_refs.py  test_llm_call_media_artifact_refs_persist_across_restart.py  test_llm_call_media_uses_source_path_label.py  test_llm_call_requires_prompt.py  test_llm_call_response_schema_normalization.py  test_llm_call_structured_output_fallback.py  test_llm_call_truncation_retry_contract.py  test_llm_call_use_context_appends_turn.py  test_llm_client_media_artifacts.py  test_llm_client_system_context.py  test_llm_client_tool_call_parsing.py  test_local_runtime_timeout_kwarg_policy.py  test_media_artifact_resolution.py  test_memact_composer_from_kg_result.py  test_memory_compact_structured_effect.py  test_memory_kg_assert_attributes_defaults.py  (+78 more)
tools-comms/: index.html
troubleshooting/: index.html
workflow-bundles/: index.html
(+185 files in other folders)
