[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "AbstractRuntime"
version = "0.4.22"
description = "AbstractRuntime: a durable graph runner designed to pair with AbstractCore."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Laurent-Philippe Albou" },
]
keywords = [
  "workflow",
  "graph",
  "durable",
  "checkpoint",
  "resume",
  "agents",
  "llm",
]
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

dependencies = [
  # Required to resolve stable structured-output schema refs like:
  # {"$ref":"abstractsemantics:kg_assertion_schema_v0"}
  "abstractsemantics>=0.0.3",
  # Required for the Runtime-owned MEMORY_KG_* effect contract and TripleStore
  # model types. Durable/vector backend dependencies such as LanceDB remain
  # package extras owned by AbstractMemory and selected by hosts such as Gateway.
  "AbstractMemory>=0.2.6",
]

[project.optional-dependencies]
# Enables `abstractruntime.integrations.abstractcore.*` imports.
abstractcore = [
  "abstractcore>=2.13.27",
  "openai<2.0.0,>=1.109.1",
  "httpx<1.0.0,>=0.28.1",
  "anyio<5.0.0,>=4.12.1",
]

apple = [
  "abstractcore[apple]>=2.13.27",
  "openai<2.0.0,>=1.109.1",
  "httpx<1.0.0,>=0.28.1",
  "anyio<5.0.0,>=4.12.1",
  "setuptools<82.0.0,>=80.10.2",
]

gpu = [
  "abstractcore[gpu]>=2.13.27",
  "openai<2.0.0,>=1.109.1",
  "httpx<1.0.0,>=0.28.1",
  "anyio<5.0.0,>=4.12.1",
  "setuptools<82.0.0,>=80.10.2",
]

all-apple = [
  "abstractcore[all-apple]>=2.13.27",
  "openai<2.0.0,>=1.109.1",
  "httpx<1.0.0,>=0.28.1",
  "anyio<5.0.0,>=4.12.1",
  "setuptools<82.0.0,>=80.10.2",
]

all-gpu = [
  "abstractcore[all-gpu]>=2.13.27",
  "openai<2.0.0,>=1.109.1",
  "httpx<1.0.0,>=0.28.1",
  "anyio<5.0.0,>=4.12.1",
  "setuptools<82.0.0,>=80.10.2",
]

# Enables AbstractCore multimodal generation helpers with common image/voice/
# audio/music capability packages.
multimodal = [
  "abstractcore[remote,vision,voice,audio,music]>=2.13.27",
  "openai<2.0.0,>=1.109.1",
  "httpx<1.0.0,>=0.28.1",
  "anyio<5.0.0,>=4.12.1",
  "Pillow<13.0.0,>=10.0.0",
  "pymupdf4llm<1.0.0,>=0.0.20",
  "pymupdf-layout<2.0.0,>=1.26.6",
  "unstructured[docx,odt,pptx,rtf,xlsx]<0.19.0,>=0.18.32",
  "python-pptx<2.0.0,>=1.0.2",
  "pandas<3.0.0,>=1.0.0",
]

# Enables `abstractruntime-mcp-worker` with the default toolsets (includes bs4/lxml).
mcp-worker = [
  "abstractcore[tools]>=2.13.27",
  "openai<2.0.0,>=1.109.1",
  "httpx<1.0.0,>=0.28.1",
  "anyio<5.0.0,>=4.12.1",
]

# CI/test dependencies. The workflow runs the basic contract suite plus focused
# runtime/AbstractCore integration tests that do not require real model servers.
test = [
  "pytest>=7.0.0",
]

# Documentation site dependencies.
docs = [
  "mkdocs>=1.6.0",
  "mkdocs-material>=9.0.0",
  "pymdown-extensions>=10.0",
]

[project.scripts]
abstractruntime-mcp-worker = "abstractruntime.integrations.abstractcore.mcp_worker:main"

[project.urls]
"AbstractCore (website)" = "https://www.abstractcore.ai/"
"AbstractRuntime (GitHub)" = "https://github.com/lpalbou/abstractruntime"
"Documentation" = "https://www.lpalbou.info/AbstractRuntime/"
"Changelog" = "https://github.com/lpalbou/abstractruntime/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/abstractruntime"]
